updating license owner openapi endpoint spec
